fix blur effect on mobile bg header

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1133,6 +1133,8 @@ a.btn {
      border-bottom: 1px solid rgba(0,0,0,0.05);
      position: fixed;
      backdrop-filter: blur(5px);
+     -webkit-backdrop-filter: blur(5px);
+     -moz-backdrop-filter: blur(5px);
      z-index: 50;
    }
 
